--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 
 <style>
   a {
-    color: seagreen !important;
+    color: orangered !important;
   }
 </style>
 
@@ -48,7 +48,7 @@
 
 <style>
   .inverted a {
-     color: darkseagreen !important;
+     color: orange !important;
   }
 </style>
 
@@ -110,6 +110,30 @@
   
   
   
+    <section class="sixteen wide mobile eight wide tablet four wide computer column dream-column">
+      <article>
+        <div class="ui top attached segment">
+          <h3 class="ui header">Me</h3>
+        </div>
+        <div class="ui attached segment markdown-body">
+          <p>Cut out summary from your post content here.</p>
+<p>The remaining content of your post.</p>
+        </div>
+      </article>
+    </section>
+  
+    <section class="sixteen wide mobile eight wide tablet four wide computer column dream-column">
+      <article>
+        <div class="ui top attached segment">
+          <h3 class="ui header">Me</h3>
+        </div>
+        <div class="ui attached segment markdown-body">
+          <p>Cut out summary from your post content here.</p>
+<p>The remaining content of your post.</p>
+        </div>
+      </article>
+    </section>
+  
 
   <section class="sixteen wide mobile eight wide tablet four wide computer column dream-column">
     <article>
@@ -138,6 +162,22 @@
     <div class="item">
       <a href="https://github.com/buta7" target="_blank">
         <i class="large github icon" title="github"></i>
+      </a>
+    </div>
+  
+
+  
+    <div class="item">
+      <a href="https://gitlab.com/buta7" target="_blank">
+        <i class="large gitlab icon" title="gitlab"></i>
+      </a>
+    </div>
+  
+
+  
+    <div class="item">
+      <a href="https://bitbucket.org/bitbucket" target="_blank">
+        <i class="large bitbucket icon" title="bitbucket"></i>
       </a>
     </div>
   
